update revision tomcat+java v1

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <main>
     <h1>paginaFicheros</h1>
     <ul>
-      <li><a href="./src/files/install_tomcat_java11.sh">Tomcat9 + Java11</a></li>
-      <li><a href="./src/files/sudo_install_tomcat_java11.sh">Tomcat9 + Java11 con sudo</a></li>
+      <li><a href="./src/files/install_tomcat_java11_v1.sh">Tomcat9 + Java11 v1</a></li>
+      <li><a href="./src/files/sudo_install_tomcat_java11_v1.sh">Tomcat9 + Java11 con sudo v1</a></li>
     </ul>
   </main>
 
