añadido ejemplo war
añadido ejemplo de una calculadora realizado en java 11

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <ul>
       <li><a href="./src/files/install_tomcat_java11_v1.sh">Tomcat9 + Java11 v1</a></li>
       <li><a href="./src/files/sudo_install_tomcat_java11_v1.sh">Tomcat9 + Java11 con sudo v1</a></li>
+      <li><a href="./src/files/CalculadoraJuanCarlos.war">Calculadora - war</a></li>
     </ul>
   </main>
 
