--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <h1>paginaFicheros</h1>
     <ul>
       <li><a href="./src/files/install_tomcat_java11_v1.sh">Tomcat9 + Java11 v1</a></li>
+      <ul><a href="https://acortar.link/X1jsod">https://acortar.link/X1jsod</a></ul>
       <li><a href="./src/files/sudo_install_tomcat_java11_v1.sh">Tomcat9 + Java11 con sudo v1</a></li>
+      <ul><a href="https://acortar.link/bzCUFT">https://acortar.link/bzCUFT</a></ul>
+      <li><a href="./src/files/SampleWebApp.war">SampleWebApp (war)</a></li>
+      <ul><a href="https://acortar.link/iMv8Tv">https://acortar.link/iMv8Tv</a></ul>
     </ul>
   </main>
 
